fix: make markdown preview text visible in dark mode (#61)

--- a/index.css
+++ b/index.css
@@ -136,6 +136,13 @@ textarea {
   margin-bottom: 15px;
   flex-wrap: wrap;
 }
+/*Change made to make markdown preview text visible in dark mode*/
+body.dark-mode .toastui-editor-contents {
+  color: #ffffff;
+}
+body.dark-mode .toastui-editor-contents * {
+  color: #ffffff;
+}
 
 .preview-section {
   background-color: white;
